# doris

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  wrangler.toml
.github/workflows/: deploy-pages.yaml
.wrangler/cache/: pages.json  wrangler-account.json
app/: page.tsx
app/docs/[[...slug]]/: page.tsx
components/: mdx.tsx
content/docs/: architecture.mdx  index.mdx  pillars.mdx  quickstart.mdx  reference.mdx  structure.mdx
docs/: deployment.md
lib/: layout.shared.tsx
public/: _redirects  index.html
public/css/: style.css
public/js/: diagram.js  main.js
src/: entry.js
