[package]
name = "my-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["http", "console_error_panic_hook", "durable_object"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
